add psql-exporter to prometheus

--- a/monitoring/sample.env.j2
+++ b/monitoring/sample.env.j2
@@ -3,3 +3,6 @@ GF_UID="1001"
 
 # Alertmanager-Discord
 DISCORD_WEBHOOK="{{ discord_webhook }}"
+
+#psql-exporter
+DATA_SOURCE_NAME="postgresql://{{ user_database }}:{{pwd_database}}@{{host_database}}:5432/?sslmode=disable"
