--- a/monitoring/config/grafana/grafana.ini.j2
+++ b/monitoring/config/grafana/grafana.ini.j2
@@ -8,7 +8,7 @@ ssl_mode = disable
 
 [smtp]
 enabled = true
-host = {{ host_email }}
+host = {{ host_email }}:587
 user = {{ user_email }}
 password = {{ pwd_email }}
 startTLS_policy = MandatoryStartTLS
